Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,13 +1,11 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "2035309257:AAHWHXipFFrdUFVfIqC3X1W6PONI3abg-2M"                              # Require restart after changing it while bot running
+OWNER_ID = "910838422"                               # Require restart after changing it while bot running
+TELEGRAM_API = "8718900"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "815351dc7bf9875acb38b60df0a81769"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "0AEp443BYIe6jUk9PVA"
+IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
@@ -15,8 +13,8 @@ DATABASE_URL = ""                           # Require restart after changing it 
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://vinzyzktaboot.greatmidoriya.workers.dev/0:"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_PERFIX = ""                              # Require restart after changing it while bot running
@@ -37,7 +35,7 @@ LEECH_FILENAME_PERFIX = ""
 DUMP_CHAT = ""
 # qBittorrent/Aria2c
 BASE_URL = ""
-SERVER_PORT = ""
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 # RSS
 RSS_DELAY = ""                              # Require restart after changing it while bot running
@@ -49,7 +47,7 @@ MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
